# VibeyMapTools

./: .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  WIKI.md  bouncecolorscaletest.bsp  bouncecolorscaletest.bsp.json  bouncecolorscaletest.content.json  bouncecolorscaletest.lit  bouncecolorscaletest.prt  bouncecolorscaletest.texinfo.json  build_log.txt  q1_detail_fence.bsp  q1_detail_fence.bsp.json  q1_detail_fence.content.json  q1_detail_fence.prt  q1_detail_fence.texinfo.json  q1_hdrtest.bsp  q1_hdrtest.bsp.json  q1_hdrtest.bsp.lm_0.hdr  q1_hdrtest.bsp.lm_5.hdr  q1_hdrtest.content.json  q1_hdrtest.texinfo.json  q1_light_black.bsp  q1_light_black.bsp.json  q1_light_black.content.json  q1_light_black.lit  q1_light_black.prt  q1_light_black.texinfo.json  q1_light_bounce_litwater.bsp  q1_light_bounce_litwater.bsp.json  q1_light_bounce_litwater.content.json  q1_light_bounce_litwater.lit  q1_light_bounce_litwater.prt  q1_light_bounce_noshadow.bsp  (+83 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmake/: VibeyVersion.cmake
common/: log.cc  mapfile.cc
docs/: README.md  bspinfo.rst  bsputil.rst  changelog.rst  conf.py  index.rst  light.rst  lightpreview.rst  maputil.rst  qbsp.rst  vis.rst
embree/lib/: embree4.lib
embree/lib/cmake/embree-4.4.0/: embree-config-version.cmake  embree-config.cmake
include/: version.hh.in
include/light/: lightcontext.hh  raystream.hh  trace_embree.hh
include/qbsp/: qbsp.hh
light/: CMakeLists.txt  cache.hh  light.cc  phong.cc  trace_optix.cu  vibey_api.cc
lightpreview/: mainwindow.cpp
oneapi-tbb-2021.11.0/lib/pkgconfig/: tbb.pc  tbb32.pc
qbsp/: CMakeLists.txt  csg.cc
scripts/: build-windows.ps1
src/bspinfo/: CMakeLists.txt  main.cc
src/bsputil/: CMakeLists.txt
src/common/: bspinfo.cc  imglib.cc  settings.cc
src/include/common/: mathlib.hh
src/include/light/: cache.hh  light.hh  lightcontext.hh  raystream.hh  trace_embree.hh  trace_optix.hh  vibey_api.hh
src/include/qbsp/: brush.hh
src/light/: CMakeLists.txt  bounce.cc  cache.cc  entities.cc  light.cc  lightgrid.cc  ltface.cc  phong.cc  surflight.cc  trace_embree.cc  trace_optix.cc  write.cc
src/lightpreview/: CMakeLists.txt  glview.cpp  glview.h  main.cpp  mainwindow.cpp  mainwindow.h
src/maputil/: CMakeLists.txt
src/qbsp/: CMakeLists.txt  brush.cc  qbsp.cc  tjunc.cc
tests/: CMakeLists.txt  regression.py  testmaps.hh.in
tests/maps/: reference_box.map
vis/: CMakeLists.txt
